--- a/app/app.css
+++ b/app/app.css
@@ -1,15 +1,165 @@
-@import "tailwindcss";
-
-@theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+:root{
+  --color-light:#f6fefc;
+  --color-dark:#05241e;
 }
 
-html,
-body {
-  @apply bg-white dark:bg-gray-950;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  max-width: 100%;
+  margin:0;
+  padding:0;
+}
 
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
-  }
+button {
+  display: block;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 1.35rem;
+  font-weight: 500;
+  letter-spacing: 0.05rem;
+  background-color: #fff;
+  color: #97900f;
+  border: unset;
+  outline: 1px solid #97900f;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  padding: 0.25em 0.5em;
+  margin-inline: auto;
+  transition: outline 0.075s ease-out, background-color 0.075s ease-out,
+    color 0.075s ease-out;
+}
+button:hover {
+  outline: 3px solid #97900f;
+}
+button:active {
+  background-color: #97900f;
+  color: #efe861;
+  outline: unset;
+}
+
+button.active {
+  background-color: #97900f;
+  color: #efe861;
+  outline: unset;
+}
+
+button.inactive {
+  background-color: #403f32;
+  color: #efe861;
+  outline: unset;
+}
+
+form {
+  width: min(calc(100dvw - 2rem), 450px);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  gap: 1rem;
+  text-align: center;
+  background-color: #6f6c391a;
+  margin-block: 1rem;
+  margin-inline: auto;
+  border-radius: 4px;
+  padding: 1rem;
+}
+
+form label {
+  width: max-content;
+  max-width: calc(100% - 2rem);
+  display: inline-flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  text-align: left;
+  gap: 0.5rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  cursor:pointer;
+}
+
+.checkbox-label,
+.radio-label{
+  font-family: "Ubuntu", sans-serif;
+  font-size:.9rem;
+  line-height:1.5;
+  font-weight:400;
+}
+
+form label::selection {
+  background-color: inherit;
+  color: inherit;
+}
+
+form input:not([type="submit"], [type="checkbox"], [type="radio"]),
+form textarea,
+select {
+  width: calc(100% - 2rem);
+  font-size: 1.1rem;
+  line-height: 1.75;
+  font-weight: 600;
+  letter-spacing: 0.05rem;
+  text-align: center;
+  border: unset;
+  border-radius: 4px;
+  outline: 1px solid #97900f;
+  padding: 0.15rem 0.25rem;
+  margin-inline:auto;
+  margin-bottom:.5rem;
+}
+
+form input:not([type="submit"], [type="checkbox"], [type="radio"])::placeholder,
+form textarea::placeholder{
+  color: #97900f;
+}
+
+form input[type="checkbox"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  min-width: 1rem;
+  width: 1rem;
+  max-width: calc(100% - 2rem);
+  height: 1rem;
+  max-height:1rem;
+  white-space: nowrap;
+  background: #fff;
+  outline: 1px solid #403f32;
+  margin-block:.5em;
+  margin-inline:0;
+  position: relative;
+}
+input[type="checkbox"]:checked {
+  outline: 2px solid #403f32;
+  
+}
+input[type="checkbox"]:checked::before {
+  content: "✔️";
+  width:100%;
+  height:100%;
+  display: inline-flex;
+  justify-content:center;
+  align-items:center;
+  font-size:.75rem;
+  color: #fff;
+  position: absolute;
+  top:0;
+  left:0;
+}
+
+form textarea {
+  min-width: calc(100% - 2rem);
+  max-width: calc(100% - 2rem);
+  min-height: 15dvh;
+  max-height: 50dvh;
+}
+
+form input:not([type="submit"], [type="checkbox"], [type="radio"]):focus {
+  outline: 4px solid #97900f;
+}
+
+form input[type="submit"],
+form button[type="submit"] {
+  font-size: 1.05rem;
 }
